...
          ),
      })}
    >
      <Tab.Screen
        component={MDHomeScreen}
        name="MDHome"
        options={{ title: 'Overview', tabBarButtonTestID: 'qa_md_tab_home' }}
      />
      <Tab.Screen
        component={MDApprovalsScreen}
        name="MDApprovals"
        options={{ title: 'Approvals', tabBarButtonTestID: 'qa_md_tab_approvals' }}
      />
    </Tab.Navigator>
  );
}

